fixing layout issues in Windows and Mac

--- a/src/privileged/vpnRecommender/content/doorhanger/doorhanger.css
+++ b/src/privileged/vpnRecommender/content/doorhanger/doorhanger.css
@@ -25,8 +25,8 @@
 body {
   color: #333333;
   background: transparent;
-  font-family:  system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+  font-family:  -apple-system, "Segoe UI",
+    "Ubuntu", "Roboto", "Oxygen", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
   width: 280px;
   padding: 0 0;
@@ -88,12 +88,12 @@ ul, ol, p {
 }
 
 #headercontainer {
-  width: 70%;
+  width: 224px;
   display: flex;
 }
 
 .info {
-  width: 15%;
+  width: 28px;
 }
 
 #header {
@@ -104,8 +104,8 @@ ul, ol, p {
 }
 
 #right-info img {
-  height: 18px;
-  width: 18px;
+  height: 16px;
+  width: 16px;
 }
 
 
@@ -120,7 +120,7 @@ ul, ol, p {
   margin-right: auto;
   margin-left: auto;
   text-align: left;
-  font-size: 18px;
+  font-size: 17px;
   height: 48px;
   margin-bottom: 10px;
   line-height: 24px;
@@ -169,8 +169,7 @@ ul, ol, p {
   justify-content: left;
   align-items: center; 
   width: 100%;
-  height: 17px;
-  padding: 10px 0px 20px 20px;
+  padding: 0px 0px 20px 20px;
 }
 
 #dontshow {
